# music_von_neumann

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bicgstab.rs  configs.rs  defaults.rs  io.rs  linear_operator.rs  main.rs  ndarray_complex.rs  test_refs.rs  types.rs  von_neumann_transform.rs  wav_processor.rs
tests/: test_refs.npz
